[gd_scene load_steps=15 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://asset/shader/one_color.gdshader" type="Shader" id=2]
[ext_resource path="res://asset/texture/dude.png" type="Texture" id=3]
[ext_resource path="res://player/arm.gd" type="Script" id=5]
[ext_resource path="res://asset/texture/arm.png" type="Texture" id=6]
[ext_resource path="res://hitbox/hurtbox.gd" type="Script" id=8]
[ext_resource path="res://asset/texture/broom.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 20, 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 16 )

[sub_resource type="Animation" id=5]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/arm/swing_node:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "swing0"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/arm/swing_node:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.216188, 1 ),
"update": 0,
"values": [ -90.0, 90.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "swing1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/arm/swing_node:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.216188, 1 ),
"update": 0,
"values": [ 90.0, -90.0 ]
}

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )
shader_param/color = Color( 0.0313726, 1, 0, 1 )

[sub_resource type="Animation" id=7]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 6 ), null ]
}

[node name="player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
health_regen = 0.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="pivot" type="Node2D" parent="."]
use_parent_material = true

[node name="arm" type="Node2D" parent="pivot"]
use_parent_material = true
position = Vector2( 9, -2 )
script = ExtResource( 5 )

[node name="swing_node" type="Node2D" parent="pivot/arm"]
use_parent_material = true

[node name="arm_sprite" type="Sprite" parent="pivot/arm/swing_node"]
use_parent_material = true
position = Vector2( -9, 0 )
rotation = -1.49012e-08
texture = ExtResource( 6 )

[node name="hand" type="Node2D" parent="pivot/arm/swing_node"]
position = Vector2( 11, 3 )
rotation = -1.49012e-08

[node name="broom_sprite" type="Sprite" parent="pivot"]
use_parent_material = true
texture = ExtResource( 9 )

[node name="body_sprite" type="Sprite" parent="pivot"]
use_parent_material = true
texture = ExtResource( 3 )

[node name="hurtbox" type="Area2D" parent="pivot"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hurtbox"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 5 )
anims/swing0 = SubResource( 3 )
anims/swing1 = SubResource( 4 )

[node name="hurt_anim" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 7 )

[connection signal="area_entered" from="pivot/hurtbox" to="." method="_on_hurtbox_area_entered"]
